tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_check_trait_wrong_parameter_type/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Could not resolve 'NotAType' in path
  ┌─ src/main.nr:3:33
  │
3 │         fn default(x: Field, y: NotAType) -> Field;
  │                                 --------
  │

Aborting due to 1 previous error
